# sm_challenge

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang_format.yml  docker.yml  linux.yml  macos.yml  win.yml
App/: CMakeLists.txt
App/src/: Menu.cpp  Menu.hpp  Path.cpp  Path.hpp  main.cpp
ci/: Makefile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/sample/: CMakeLists.txt  main.cpp
cmake/: SquareMindConfig.cmake.in
cmake/dependencies/: CMakeLists.txt
patches/: libigl.patch
